...
                Label("Lists", systemImage: "list.bullet.rectangle.portrait")
            }
            .tag(0)

            AccountListView(viewModel: accountViewModel)
                .tabItem {
                    Label("Accounts", systemImage: "person.2")
                }
                .tag(1)

            SettingsView()
                .tabItem {
                    Label("Settings", systemImage: "gear")
                }
                .tag(2)
        }
        .onAppear {
            accountViewModel.setModelContext(modelContext)
        }
...
